--- a/ITECC_OrderSystem/ITECC_OrderSystem/My Project/Resources.resx
+++ b/ITECC_OrderSystem/ITECC_OrderSystem/My Project/Resources.resx
@@ -133,4 +133,7 @@
   <data name="IMG_1866" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1866.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shopping-cart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shopping-cart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
